# three_variable_cl_algebra

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
examples/: matrix_inverse.py  projected_sse.py
scripts/: beta_pde_simplification.py  central_derivative.py  classical_equation_of_motion.py  classsical_equation_of_motion.py  common_expectations.py  derivative.py  effective_mass_plot.py  energy_distribution.py  equation_of_motion.py  equilibrium_squeeze_values.py  equilibrium_squeezing.py  generator_representations_of_operators.py  matrix_inverse.py  minimum_drift_state.py  normal_order_example.py  numerical_derivative_scan_params.py  numerical_sse.py  plot_coefficients.py  plot_numerical_sse.py  pointer_states.py  print_common_expectations.py  print_common_formula.py  projected_sse.py  projected_x_series.py  scan_param.py  shifted_operators.py  sodium_copper_width_against_t.py  squeeze_derivative.py  squeeze_equilibrium.py  squeezing_stability.py  state_drift.py  transform_sse.py  transformation.py  transformed_alpha.py  uncertainty.py  uncertainty_plot.py
scripts/_old/: equilibrium_squeeze_values_old.py  stability_plots.py
scripts/beta_plot/: beta_against_m.py  beta_against_m_against_eta_lambda.py  beta_against_m_against_eta_omega.py  sodium_copper_width_against_t.py  stability_plots.py  uncertainty_plots.py
scripts/complete_simulation/: caldeira_leggett.py  caldeira_leggett_states.py  gaussian_states.py  harmonic_trends.py  stochastic_schrodinger.py  stochastic_schrodinger_states.py  thermal_occupation.py
scripts/issc_poster/: convergence_of_squeze.py  theoretical_plots.py  typical_state.py  wigner.py
scripts/rewrite/: common_expectations.py  normal_order_example.py  projected_x_series.py  squeeze_derivative.py
tests/: test_conversion.py  test_expectation.py  test_jacobi.py  test_normalize.py  test_uncertainty.py  util.py
three_variable/: __init__.py  beta.py  coherent_states.py  decorators.py  equilibrium_squeeze.py  fokker_planck.py  physical_systems.py  projected_sse.py  simulation.py  symbols.py  util.py
three_variable/new_paper/: coherent_states.py  equilibrium_squeeze.py  projected_sse.py  symbols.py
three_variable/simulation/: __init__.py  _projected_equations.py  condition.py  physical_systems.py
